--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
   "Quimper2": { "lat": 48.383, "lon": -4.500 },
   "Quimper3": { "lat": 48.000, "lon": -4.100 },
   "Quimper4": { "lat": 43.500, "lon": -1.467 },
-  "Quimper5": { "lat": 48.852969, "lon": 2.349903 },
+  "StEtienne": { "lat": 45.439695, "lon": 4.3871779 },
   "Quimper6": { "lat": 48.383, "lon": -4.500 },
   "Quimper7": { "lat": 48.000, "lon": -4.100 },
   "Quimper8": { "lat": 43.500, "lon": -1.467 },
@@ -222,20 +222,20 @@ window.onload = function(){
       </div>
 <!--MERCIER LILY-->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
-        <div id="ville_Quimper5" class="card bg-dark m-2">
+        <div id="ville_StEtienne" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
           <div class="card-header">
-            <div class="card-title h5">Quimper</div>
-            <div class="card-subtitle text-gray">Capitale</div>
+            <div class="card-title h5">Saint-Etienne</div>
+            <div class="card-subtitle text-gray">Ville</div>
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/%C3%89glise_Saint-%C3%89tienne_d%27Ille-sur-T%C3%AAt_01.jpg/800px-%C3%89glise_Saint-%C3%89tienne_d%27Ille-sur-T%C3%AAt_01.jpg" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Insérez description...
+            Une des plus belles villes de France !
           </div>
         </div>
       </div>
